--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Movies</title>
-  <base href="/warsawjs-workshop-29-movie/">
+  <base href="https://gosiaptak.github.io/warsawjs-workshop-29-movie/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
